--- a/Readme
+++ b/Readme
@@ -1,64 +1,111 @@
+
+
 # 🚀 Proyecto de QA en Inlaze
 
 ## 📜 Descripción del Proyecto
 
-Este repositorio contiene las pruebas automatizadas y los scripts relacionados con las pruebas de calidad (QA) para Inlaze,
-<br> una empresa de marketing de afiliados especializada en apuestas deportivas.
-<br>El objetivo principal de este proyecto es asegurar que los sistemas de Inlaze sean de alta calidad y confiabilidad, apoyando su crecimiento en el mercado latinoamericano.
+Este repositorio contiene las pruebas automatizadas y los scripts relacionados con las pruebas de calidad (QA) para **Inlaze**, una empresa de marketing de afiliados especializada en apuestas deportivas. El objetivo principal de este proyecto es asegurar que los sistemas de Inlaze sean de alta calidad y confiabilidad, apoyando su crecimiento en el mercado latinoamericano.
 
-Tecnologias utilizadas: <br>
-<br>
-Selnuim con webdriver 
+### 🛠 Tecnologías Utilizadas
+- **Selenium** con WebDriver para la automatización de pruebas.
 
-IMPORTANTE: 
+---
 
-Para que sea mas facil de comprender y maneter el orden las pruebas se pensaron en dos partes: <br> 
-Registro usuario: <br>
-al cual le pertenencen los siguientes scripts: 
+## 📋 Estructura de las Pruebas
 
-<br>
-<br>
+Para facilitar la comprensión y el mantenimiento del proyecto, las pruebas se han dividido en dos partes principales:
 
-### 1. **Login de Usuario**:
-<br>le pertenecen los siguientes scripts: <br>
-<br>
-   - ✅ login.py
-   - ✅ cerrar_secion.py 
+### 1. **Registro de Usuario**
+El módulo de **registro de usuario** incluye las siguientes pruebas automatizadas:
 
-### 2. **Registro de Usuario**:
-   - 🔑 contrasenas_No_coinciden.py
-   - 🔑contrasena_errada.py 
-   - 🔑email:incorrecto.py
-   - 🔑nombre_incompleto.py 
-   - 🔑habilitar_ojo.py <br>
+- ✅ `login.py`: Verifica el proceso de login.
+- ✅ `cerrar_sesion.py`: Verifica el cierre de sesión correctamente.
 
+### 2. **Validación de Registro**
+Este módulo se enfoca en la validación de los campos de registro, con los siguientes scripts de prueba:
 
+- 🔑 `contrasenas_No_coinciden.py`: Verifica que las contraseñas no coincidan.
+- 🔑 `contrasena_errada.py`: Verifica que la contraseña ingresada sea incorrecta.
+- 🔑 `email_incorrecto.py`: Verifica que el formato del correo electrónico sea incorrecto.
+- 🔑 `nombre_incompleto.py`: Verifica que el nombre esté completo.
+- 🔑 `habilitar_ojo.py`: Verifica que la opción para mostrar la contraseña esté habilitada.
 
-En el CP1 Verificar registro de usuarios nuevos
-se unieron los siguientes escenarios: 
-- Verificar que se pueda registrar un usuario con nombre, email y contraseña válidos.
-- Validar que el campo de nombre acepte mínimo 2 palabras.
-- Verificar que el email cumpla con el formato estándar y sea único en la base de datos.
+---
+
+## 📝 Casos de Prueba
+
+### CP1: Verificar Registro de Usuarios Nuevos
+
+En este caso de prueba, se validan los siguientes escenarios:
+
+- Verificar que un usuario pueda registrarse con nombre, correo electrónico y contraseña válidos.
+- Validar que el campo de nombre acepte un mínimo de dos palabras.
+- Verificar que el correo electrónico cumpla con el formato estándar y sea único en la base de datos.
 - Validar que la contraseña cumpla con los requisitos de longitud y caracteres.
 - Comprobar que el formulario no se envíe si los campos obligatorios no están completos.
 - Verificar que el sistema informe si las contraseñas ingresadas no coinciden.
 
-En el CP2 Validar login usuario
-se unieron los siguientes escenarios: 
-    - Verificar que el usuario pueda loguearse con el email y contraseña correctos.
-    - Validar que el formulario de login no se envíe si los campos no están completos.
-    - Comprobar que al ingresar se muestre el nombre del usuario.
-    - Verificar que la plataforma permita cerrar la sesión correctamente.
+### CP2: Validar Login de Usuario
 
-lo anterior lo podra ubicar en el repositorio en la opciòn proyectos, este proyecto se llama Inlaze_Track y este es el link https://github.com/users/caromerou/projects/5/views/1
+Este caso de prueba incluye los siguientes escenarios:
 
-Se hallaron 3 bugs 
+- Verificar que el usuario pueda iniciar sesión con el correo electrónico y la contraseña correctos.
+- Validar que el formulario de login no se envíe si los campos no están completos.
+- Comprobar que, al ingresar, se muestre el nombre del usuario.
+- Verificar que la plataforma permita cerrar sesión correctamente.
+
+---
+
+## 📂 Proyecto en GitHub
+
+Puedes encontrar el seguimiento de este proyecto en la sección de **Proyectos** de GitHub. El proyecto se llama **Inlaze_Track**, y puedes acceder a él a través del siguiente enlace:
+
+[Inlaze_Track en GitHub](https://github.com/users/caromerou/projects/5/views/1)
+
+---
+
+## 🐞 Bugs Encontrados
+
+Se han identificado y documentado 3 bugs durante la ejecución de las pruebas. Estos bugs han sido reportados en los issues correspondientes de GitHub para su seguimiento y corrección.
+
+---
+
+## ⚙️ Cómo Ejecutar las Pruebas
+
+Para ejecutar las pruebas automatizadas en tu entorno local, sigue estos pasos:
+
+1. Clona el repositorio:
+
+    ```bash
+    git clone https://github.com/caromerou/Inlaze.git
+    ```
+
+2. Instala las dependencias necesarias:
+
+    ```bash
+    pip install -r requirements.txt
+    ```
 
 
+---
 
-   
+## 📅 Contribuciones
 
+Si deseas contribuir a este proyecto, por favor sigue estos pasos:
 
-1. **Clona este repositorio**:
-   ```bash
-   git clone https://github.com/tu-usuario/tu-repositorio.git
+1. Realiza un fork del repositorio.
+2. Crea una nueva rama (`git checkout -b feature/nueva-caracteristica`).
+3. Realiza tus cambios y haz un commit (`git commit -m 'Añadir nueva característica'`).
+4. Sube tus cambios (`git push origin feature/nueva-caracteristica`).
+5. Abre un pull request.
+
+¡Gracias por tu colaboración!
+
+---
+
+## 📧 Contacto
+
+Para más información o si tienes alguna duda, no dudes en contactarme:
+
+- **Correo electrónico**: caromerou@correo.com
+- **GitHub**: [@caromerou](https://github.com/caromerou)
