--- a/Readme
+++ b/Readme
@@ -67,7 +67,7 @@ Puedes encontrar el seguimiento de este proyecto en la sección de **Proyectos**
 ## 🐞 Bugs Encontrados
 
 Se han identificado y documentado 3 bugs durante la ejecución de las pruebas. Estos bugs han sido reportados en los issues correspondientes de GitHub para su seguimiento y corrección.
-
+(los bugs corresponden a CP1 Registro de usuarios)
 ---
 
 ## ⚙️ Cómo Ejecutar las Pruebas
